layout/style/res/forms.css
/* ... */
input[type=range]::-moz-range-thumb {
  


  -moz-appearance: range-thumb !important;
  
  display: block !important;
  float: none !important;
  position: static !important;
  writing-mode: unset !important;
  direction: unset !important;
  width: 1em;
  height: 1em;
  border: 0.1em solid #999;
  border-radius: 0.5em;
  background-color: #F0F0F0;
  
  user-select: none !important;
}

input[type="number"] {
  -moz-appearance: number-input;
}

input[type=number]::-moz-number-wrapper {
  
  display: flex;
  float: none !important;
  position: static !important;
  block-size: 100%;
}

input[type=number]::-moz-text-control-editing-root {
  display: block; 


  flex: 1;
  min-inline-size: 0;
  align-self: center;
  
  padding-inline: 0;
}

input[type=number]::-moz-number-spin-box {
  writing-mode: horizontal-tb;
  display: flex;
  flex-direction: column;
%ifdef XP_WIN
  


  width: 16px;
%endif
  







  height: 1em;
  max-height: 1em;
  align-self: center;
  justify-content: center;
}

input[type=number]::-moz-number-spin-up {
  writing-mode: horizontal-tb;
  -moz-appearance: spinner-upbutton;
  display: block; 
  flex-grow: 1;
  cursor: default;
  
  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="5"><path d="M1,4 L3,0 5,4" fill="dimgrey"/></svg>');
  background-repeat: no-repeat;
  background-position: center bottom;
  border: 1px solid darkgray;
  border-bottom: none;
  

  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

input[type=number]::-moz-number-spin-down {
  writing-mode: horizontal-tb;
  -moz-appearance: spinner-downbutton;
  display: block; 
  flex-grow: 1;
  cursor: default;
  
  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="5"><path d="M1,1 L3,5 5,1" fill="dimgrey"/></svg>');
  background-repeat: no-repeat;
  background-position: center top;
  border: 1px solid darkgray;
  border-top: none;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

input[type="number"] > div > div > div:hover {
  
  background-color: lightblue;
}

input[type="date"],
input[type="time"] {
  overflow: hidden !important;
  font-family: -moz-fixed;
  cursor: default;
}

input[type="date"]:disabled,
input[type="time"]:disabled,
input[type="date"]:-moz-read-only,
input[type="time"]:-moz-read-only {
  color: GrayText;
}

:-moz-autofill, :-moz-autofill-preview {
  filter: grayscale(21%) brightness(88%) contrast(161%) invert(10%) sepia(40%) saturate(206%);
}
:-moz-autofill-preview {
  color: GrayText;
}

